apps/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
  labels:
    app: jellyfin
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/part-of: phoenyxlab
    app.kubernetes.io/managed-by: kustomize
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
        app.kubernetes.io/name: jellyfin
        app.kubernetes.io/instance: jellyfin
        app.kubernetes.io/part-of: phoenyxlab
        app.kubernetes.io/managed-by: kustomize
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.11
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: movies
              mountPath: /movies
              readOnly: true
            - name: music
              mountPath: /music
              readOnly: true
            - name: shows
              mountPath: /shows
              readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: movies
          hostPath:
            path: /media/movies
        - name: music
          hostPath:
            path: /media/music
        - name: shows
          hostPath:
            path: /media/tv
