apps/media/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phoenyxfin
  namespace: media
spec:
  selector:
    app: jellyfin
  ports:
    - port: 8096
      targetPort: 8096
  type: ClusterIP
